--- a/languages/cs.ini
+++ b/languages/cs.ini
@@ -127,16 +127,9 @@ Book Cover = "Obálka"
 bookbag_confirm_empty = "Jste si jistí, že chcete vyprázdnit košík?"
 bookbag_delete = "Odstranit vybrané položky"
 bookbag_delete_selected = "Odstranit vybrané"
-bookbag_email = "Poslat vybrané položky e-mailem"
-bookbag_email_selected = "Poslat e-mailem vybrané"
-bookbag_export = "Exportovat vybrané položky"
-bookbag_export_selected = "Exportovat vybrané"
 bookbag_full = "Plný"
 bookbag_full_msg = "Váš košík je plný"
 bookbag_is_empty = "Váš košík je prázdný"
-bookbag_print_selected = "Vytisknout vybrané"
-bookbag_save = "Uložit položky"
-bookbag_save_selected = "Uložit vybrané"
 Bookmark = "Záložka"
 bookplate_label = "Ex libris %%title%%"
 Books = "Knihy"
@@ -158,12 +151,16 @@ browse_lcc = "Procházet podle třídění kongresové knihovny (LCC)"
 browse_publishDate = "Rok vydání"
 browse_title = "Název"
 browse_topic = "Téma"
+bulk_email = "Poslat e-mailem vybrané"
 bulk_email_success = "Položky odeslány e-mailem"
 bulk_email_title = "Položky z knihovního katalogu"
 bulk_error_missing = "Některé údaje chybí. Váš požadavek nebyl úspěšný."
+bulk_export = "Exportovat vybrané"
 bulk_export_not_supported = "Záznam(y), který(é) jste vybral(a) nelze exportovat hromadně."
 bulk_fail = "Omlouváme se, došlo k chybě. Zkuste to znovu později."
 bulk_noitems_advice = "Nebyly vybrány žádné položky. Vyberte položku zaškrtnutím a zkuste to znovu."
+bulk_print = "Tisknout vybrané"
+bulk_save = "Uložit vybrané"
 bulk_save_error = "Některé údaje chybí. Položky nebyly uloženy."
 bulk_save_success = "Položky uloženy"
 By = "Od autora"
@@ -387,7 +384,6 @@ email_login_requested = "Požádali jste o přihlášení pomocí e-mailové adr
 email_login_subject = "Přihlášení na stránky %%title%%"
 email_maximum_recipients_note = "Je možné určit maximálně %%max%% příjemců zprávy."
 email_multiple_recipients_note = "Můžete určit více příjemců zprávy. Jednotlivé adresy oddělte čárkou."
-email_selected = "Poslat e-mailem"
 email_selected_favorites = "Poslat oblíbené e-mailem"
 email_sending = "Odesílám e-mail"
 email_subject = "Téma"
@@ -421,7 +417,6 @@ export_invalid_format = "Tuto položku nelze exportovat ve vybraném formátu."
 export_missing = "Chybí některé údaje. Položky nebylo možné exportovat."
 export_no_formats = "Položku nelze exportovat."
 export_save = "Uložit soubor"
-export_selected = "Exportovat vybrané"
 export_selected_favorites = "Exportovat vybrané oblíbené položky"
 export_send = "Začít export do %%service%%"
 export_success = "Export byl úspěšný"
@@ -1039,7 +1034,6 @@ Preview from = "Náhled od"
 Previous Search Result = "Předchozí výsledek vyhledávání"
 Previous Title = "Předchozí název"
 Print = "Vytisknout"
-print_selected = "Tisknout vybrané"
 Private = "Neveřejný"
 Production Credits = "Na produkci se podíleli"
 Profile = "Profil"
