--- a/languages/mn.ini
+++ b/languages/mn.ini
@@ -126,16 +126,9 @@ Book Cover = "Номын хавтас"
 bookbag_confirm_empty = "Та номын цүнхээ хоослохыг хүсэж байгаад итгэлтэй байна уу?"
 bookbag_delete = "Номын цүнхний сонгосон зүйлийг устгах"
 bookbag_delete_selected = "Сонгосныг устгах"
-bookbag_email = "Номын цүнхний сонгосон зүйлийг цахим шуудангаар илгээх"
-bookbag_email_selected = "Сонгосныг цахим шуудангаар илгээх"
-bookbag_export = "Номын цүнхний сонгосон зүйлийг экспортлох"
-bookbag_export_selected = "Сонгосныг экспортлох"
 bookbag_full = "Дүүрсэн"
 bookbag_full_msg = "Таны номын цүнх дүүрсэн"
 bookbag_is_empty = "Таны номын цүнх хоосон"
-bookbag_print_selected = "Сонгосныг хэвлэх"
-bookbag_save = "Номын цүнхний сонгосон зүйлийг хадгалах"
-bookbag_save_selected = "Сонгосныг хадгалах"
 Bookmark = "Хавчуурга"
 bookplate_label = "%%гарчиг%% номын хавчуурга"
 Books = "Номууд"
@@ -157,12 +150,16 @@ browse_lcc = "Залгах дугаар (LC)"
 browse_publishDate = "Хэвлэсэн он"
 browse_title = "Гарчиг"
 browse_topic = "Сэдэв"
+bulk_email = "Сонгосныг цахим шуудангаар илгээх"
 bulk_email_success = "Таны зүйл(үүд)-ийг цахим шуудангаар илгээсэн"
 bulk_email_title = "Номын сангийн каталогийн зүйлүүд"
 bulk_error_missing = "Зарим өгөгдөл дутуу байна. Таны хүсэлт амжилтгүй боллоо."
+bulk_export = "Сонгосныг экспортлох"
 bulk_export_not_supported = "Таны сонгосон мэдээлэл(үүд) бөөнөөр экспортлохыг дэмждэггүй."
 bulk_fail = "Уучлаарай, алдаа гарлаа. Дахин оролдоно уу."
 bulk_noitems_advice = "Ямар ч зүйлийг сонгоогүй байна. Зүйлийн хажуугийн тэмдэглэх талбар дээр дарж дахин оролдоно уу."
+bulk_print = "Сонгосныг хэвлэх"
+bulk_save = "Сонгосныг хадгалах"
 bulk_save_error = "Зарим өгөгдөл дутуу байна. Таны зүйлүүдийг хадгалсангүй."
 bulk_save_success = "Таны зүйл(үүд)-ийг амжилттай хадгаллаа"
 By = "-н"
@@ -386,7 +383,6 @@ email_login_requested = "%%title%% дээр таны цахим шууданги
 email_login_subject = "%%title%% руу нэвтрэх"
 email_maximum_recipients_note = "Хамгийн ихдээ %%max%% тооны хүлээн авагчийг зөвшөөрнө."
 email_multiple_recipients_note = "Та олон хүлээн авагчдыг таслалаар тусгаарлан зааж өгч болно."
-email_selected = "Сонгосныг цахим шуудангаар илгээх"
 email_selected_favorites = "Сонгосон дуртай зүйлээ цахим шуудангаар илгээх"
 email_sending = "Зурвас илгээж байна..."
 email_subject = "Сэдэв"
@@ -419,7 +415,6 @@ export_invalid_format = "Сонгосон экспортын форматыг э
 export_missing = "Зарим өгөгдөл алга байна. Таны зүйлсийг экспортолсонгүй."
 export_no_formats = "Энэ бүртгэл экспортыг дэмждэггүй."
 export_save = "Файл хадгалах"
-export_selected = "Сонгосныг экспортлох"
 export_selected_favorites = "Сонгосон дуртай зүйлсийг экспортлох"
 export_send = "%%service%% руу илгээх"
 export_success = "Экспортлоход бэлэн"
@@ -1036,7 +1031,6 @@ Preview from = "-с урьдчилан харах"
 Previous Search Result = "Өмнөх хайлтын үр дүн"
 Previous Title = "Өмнөх гарчиг"
 Print = "Хэвлэх"
-print_selected = "Сонгосныг хэвлэх"
 Private = "Хувийн"
 Production Credits = "Үйлдвэрлэлийн зээл"
 Profile = "Танилцуулга"
