--- a/languages/aliases.ini
+++ b/languages/aliases.ini
@@ -1,5 +1,4 @@
-bulk_delete = "delete_selected"
-bulk_delete_myresearch = "bulk_delete"
+bulk_delete_myresearch = "delete_selected"
 bulk_email_cart = "bulk_email"
 bulk_email_myresearch = "bulk_email"
 bulk_email_search = "bulk_email"
