Augment language translations.

--- a/languages/ISO639-3/mi.ini
+++ b/languages/ISO639-3/mi.ini
@@ -1,7 +1,11 @@
+; Some data in this file is derived from the Lexvo.org RDF dump, licensed under
+; a Creative Commons Attribution-ShareAlike (CC-BY-SA) 3.0 Unported license
+; (http://creativecommons.org/licenses/by-sa/3.0/).
 abk = "Apakāhiana"
 afr = "Awherikāna"
 aka = "Ākana"
 amh = "Amahereka"
+ang = "Reo Ingarihi Inamata"
 ara = "Ārapi"
 arg = "Arakonihi"
 asm = "Āhamēhi"
@@ -93,6 +97,7 @@ mkd = "Makerōnia"
 mlg = "Marakāhi"
 mlt = "Mārata"
 mon = "Mongōria"
+mri = "Reo Māori"
 msa = "Marei"
 mya = "Pēmīhi"
 nav = "Nawahō"
@@ -100,6 +105,7 @@ nbl = "Enetepēra ki te Tonga"
 nde = "Enetepēra ki te Raki"
 ndo = "Natōka"
 nep = "Nepari"
+nho = "Reo Takuu"
 nld = "Tati"
 nno = "Nīnōka Nōwei"
 nob = "Pakamō Nōwei"
@@ -114,6 +120,7 @@ pol = "Pōrihi"
 por = "Pōtukīhi"
 pus = "Pāhitō"
 que = "Kētua"
+rap = "Reo Rapa Nui"
 roh = "Romānihi"
 ron = "Romeinia"
 run = "Rūniti"
