Remove special character to prevent sorting problems.

--- a/languages/native.ini
+++ b/languages/native.ini
@@ -22,7 +22,7 @@ Hindi = "हिंदी"
 Irish = "Gaeilge"
 Italian = "Italiano"
 Japanese = "日本語"
-Māori = "Māori"
+Maori = "Māori"
 Mongolian = "Монгол"
 Northern Sámi = "Sámegiella"
 Polish = "polski"
