Add missing line.

--- a/languages/mi.ini
+++ b/languages/mi.ini
@@ -1,4 +1,5 @@
 ; Translations courtesy of Craig Murdoch.
+Abstract = "Whakarāpopotonga"
 Account = "Pūkete"
 account_block_options_missing = "Kua tangohia ētahi kōwhiringa nā tētahi āraitanga ki tō pūkete. Ngā taipitopito: %%details%%"
 Add to another list = "Tāpiri ki tētahi atu rārangi"
