use aria-label instead of title, adapt translations

--- a/languages/ServiceType/de.ini
+++ b/languages/ServiceType/de.ini
@@ -1,4 +1,4 @@
-getDOI = "Weiterleitung zum DOI"
-getFullTxt = "Weiterleitung zum digitalen Volltext"
-getHolding = "Weiterleitung zum Bestand"
-getWebService = "Weiterleitung zum Web-Dienst"
+getDOI = "Link zum DOI"
+getFullTxt = "Link zum elektronischen Bestand"
+getHolding = "Link zum lokalen Bestand"
+getWebService = "Link zum Web-Dienst"
