--- a/languages/ServiceType/en.ini
+++ b/languages/ServiceType/en.ini
@@ -1,4 +1,4 @@
-getDOI = "Forwarding to DOI"
-getFullTxt = "Forwarding to digital full text"
-getHolding = "Forwarding to holding"
-getWebService = "Forwarding to web service"
+getDOI = "link to DOI"
+getFullTxt = "link to electronic holding"
+getHolding = "link to local print holding information"
+getWebService = "link to web service"
