Add support for persistent login (#3027)
- Resolves VUFIND-619.

--- a/languages/en.ini
+++ b/languages/en.ini
@@ -536,6 +536,8 @@ footer_header_find_more = "Find More"
 footer_header_need_help = "Need Help?"
 footer_header_search_options = "Search Options"
 for search = "for search"
+Forget All = "Forget All"
+Forget Login = "Forget Login"
 Forgot Password = "Forgot Password"
 Form name = "Form name"
 Format = "Format"
@@ -740,6 +742,7 @@ Kit = "Kit"
 Language = "Language"
 large = "Large"
 Last = "Last"
+Last Login = "Last Login"
 Last Modified = "Last Modified"
 Last Name = "Last Name"
 Last Search Result = "Last Search Result"
@@ -800,6 +803,8 @@ Login = "Login"
 Login for full access = "Login for full access."
 login_disabled = "Login is not available at this time."
 login_target = "Library"
+login_warning_email_message = "%%title%%: Suspicious login has been detected on your account. All your saved logins have been invalidated and you will be required to log in again. It is recommended that you change your password and review your account activity to make sure there are no unfamiliar actions."
+login_warning_email_subject = "Alert: Suspicious login detected"
 Logout = "Logout"
 Main Author = "Main Author"
 Main Authors = "Main Authors"
@@ -871,6 +876,7 @@ No new item information is currently available. = "No new item information is cu
 No pickup locations available = "No pickup locations available"
 No Preference = "No Preference"
 No reviews were found for this record = "No reviews were found for this record"
+No saved logins = "No saved logins"
 No Tags = "No Tags"
 no_description = "Description not available."
 no_email_address = "Email address missing."
@@ -1157,6 +1163,7 @@ Related Author = "Related Author"
 Related Items = "Related Items"
 Related Subjects = "Related Subjects"
 Relevance = "Relevance"
+remember_me = "Remember my login for the next %%days%% days"
 Remove filter = "Remove Filter"
 Remove Filters = "Remove Filters"
 Remove from Book Bag = "Remove from Book Bag"
@@ -1201,6 +1208,9 @@ Save Comment = "Save Comment"
 save_search = "Save Search"
 save_search_remove = "Remove Saved Search"
 Saved in = "Saved in"
+Saved Logins = "Saved Logins"
+saved_login_actions = "Actions"
+saved_login_platform_and_browser = "Platform / Browser"
 schedule_daily = "Daily"
 schedule_explanation = "Receive alert emails about new results for search."
 schedule_none = "None"
