Update language file.

--- a/languages/mi.ini
+++ b/languages/mi.ini
@@ -70,12 +70,15 @@ Books = "Ngā pukapuka"
 Borrowing Location = "Tauwāhi Mino"
 Braille = "Tuhi matapō "
 Brief View = "Tirohanga poto"
+bulk_email = "Kua tīpakona te īmērā"
 bulk_email_success = "I īmēratia t/ō tūemi"
 bulk_email_title = "Ngā tūemi Putumōhio Whare Pukapuka AUT"
 bulk_error_missing = "E ngaro ana ētahi raraunga. Kāore tō tono i oti pai."
+bulk_export = "Kua tīpakona te kaweake"
 bulk_export_not_supported = "Kāore te/ngā pūkete kua tīpako koe i te tautoko i te kaweake rahi."
 bulk_fail = "Ka aroha, kua puta tētahi hapa. Mahia anō."
 bulk_noitems_advice = "Kāore tētahi tūemi i tīpakohia. Me pāwhiri ki tētahi pouakataki i te taha o tētahi tūemi, ka ngana anō."
+bulk_print = "Tāngia ngā mea kua tīpakona"
 bulk_save_error = 'E ngaro ana ētahi raraunga. "Kāore i tiakina ō tūemi.'
 bulk_save_success = "I oti pai te tiaki i ō tūemi"
 By = "Mā"
@@ -210,7 +213,6 @@ email_failure = "Hapa - Tē taea te karere te tuku"
 email_link = "Hononga"
 email_maximum_recipients_note = "E %%max%% te mōrahi kaiwhiwhi e whakaaetia ana."
 email_multiple_recipients_note = "Ka taea te tautuhi kaiwhiwhi maha me te wehewehe ki te piko."
-email_selected = "Kua tīpakona te īmērā"
 email_selected_favorites = "Ngā makau īmēra kua tīpakona"
 email_sending = "E tuku karere ana…"
 email_subject = "Marau"
@@ -236,7 +238,6 @@ export_invalid_format = "Kāore te hōputu kaweake i tīpakona e tautokona ana e
 export_missing = 'E ngaro ana ētahi raraunga. "Kāore ō tūemi i kawea ake.'
 export_no_formats = "Kāore tēnei pūkete e tautoko ana i te kaweake."
 export_save = "Tiaki kōnae"
-export_selected = "Kua tīpakona te kaweake"
 export_selected_favorites = "Kawea ake ngā makau kua tīpakona"
 export_send = "Tuku ki %%service%%"
 export_success = "Kua rite te kaweake"
@@ -608,7 +609,6 @@ Preview = "Arokite"
 Preview from = "Arokite mai i"
 Previous Title = "Taitara tōmua"
 Print = "Tā"
-print_selected = "Tāngia ngā mea kua tīpakona"
 Private = "Tūmataiti"
 Production Credits = "Ngā mihi whakaputa"
 Profile = "Kīwhaiaro"
