Configurable bulk action limits (#3239)

--- a/languages/en.ini
+++ b/languages/en.ini
@@ -128,16 +128,9 @@ Book Cover = "Book Cover"
 bookbag_confirm_empty = "Are you sure you want to empty your Book Bag?"
 bookbag_delete = "Delete Selected Book Bag Items"
 bookbag_delete_selected = "Delete Selected"
-bookbag_email = "Email Selected Book Bag Items"
-bookbag_email_selected = "Email Selected"
-bookbag_export = "Export Selected Book Bag Items"
-bookbag_export_selected = "Export Selected"
 bookbag_full = "Full"
 bookbag_full_msg = "Your Book Bag is Full"
 bookbag_is_empty = "Your Book Bag is empty"
-bookbag_print_selected = "Print Selected"
-bookbag_save = "Save Selected Book Bag Items"
-bookbag_save_selected = "Save Selected"
 Bookmark = "Bookmark"
 bookplate_label = "%%title%% bookplate"
 Books = "Books"
@@ -162,12 +155,17 @@ browse_lcc = "Call Number (LC)"
 browse_publishDate = "Year of Publication"
 browse_title = "Title"
 browse_topic = "Topic"
+bulk_email = "Email Selected"
 bulk_email_success = "Your item(s) were emailed"
 bulk_email_title = "Library Catalog Items"
 bulk_error_missing = "Some data was missing. Your request was not successful."
+bulk_export = "Export Selected"
 bulk_export_not_supported = "The record(s) you have selected do not support bulk export."
 bulk_fail = "Sorry, an error has occurred. Please try again."
+bulk_limit_exceeded = "Selection of %%count%% items exceeds the limit of %%limit%% for this action. Please select fewer items."
 bulk_noitems_advice = "No items were selected. Please click on a checkbox next to an item and try again."
+bulk_print = "Print Selected"
+bulk_save = "Save Selected"
 bulk_save_error = "Some data was missing. Your items were not saved."
 bulk_save_success = "Your item(s) were saved successfully"
 By = "By"
@@ -396,7 +394,6 @@ email_login_requested = "Login has been requested with your email address at %%t
 email_login_subject = "Login to %%title%%"
 email_maximum_recipients_note = "At most %%max%% recipients are allowed."
 email_multiple_recipients_note = "You may specify multiple recipients separated by commas."
-email_selected = "Email Selected"
 email_selected_favorites = "Email Selected Items"
 email_sending = "Sending Message..."
 email_subject = "Subject"
@@ -446,7 +443,6 @@ export_invalid_format = "The selected export format is not supported by this rec
 export_missing = "Some data was missing. Your items were not exported."
 export_no_formats = "This record does not support export."
 export_save = "Save File"
-export_selected = "Export Selected"
 export_selected_favorites = "Export Selected Items"
 export_send = "Send to %%service%%"
 export_success = "Export Ready"
@@ -1071,7 +1067,6 @@ Preview from = "Preview from"
 Previous Search Result = "Previous Search Result"
 Previous Title = "Previous Title"
 Print = "Print"
-print_selected = "Print Selected"
 Private = "Private"
 Production Credits = "Production Credits"
 Profile = "Profile"
