fix missing translations for previous commit

--- a/languages/en.ini
+++ b/languages/en.ini
@@ -940,6 +940,7 @@ od_ebook-mediado = "MediaDo Reader eBook"
 od_ebook-overdrive = "OverDrive Read eBook"
 od_ebook-pdf-adobe = "Adobe PDF eBook"
 od_ebook-pdf-open = "Open PDF eBook"
+od_edit_hold_email = "Edit Hold Email"
 od_expires_on = "This title expires on %%due_date%%."
 od_get_title = "OverDrive Download"
 od_gettitle_failure = "This title could not be downloaded."
@@ -964,9 +965,10 @@ od_hold_update_failure = "The hold update request failed. "
 od_hold_update_success = "The hold was updated successfully."
 od_holds = "OverDrive Holds"
 od_info_unavail = "This information is currently unavailable."
-od_is_checkedout = "You have this title checked out.  It's due on %%due_date%%."
-od_is_on_hold = "You have this title on hold."
+od_is_checkedout = "You have this resource checked out.  It's due on %%due_date%%."
+od_is_on_hold = "You have this resource on hold."
 od_loans = "OverDrive Loans"
+od_mag_issue_ischeckedout = "checked out"
 od_magazine-overdrive = "Digital Magazine"
 od_mycontent_help = "For information about and help with downloading these titles, see <a href="%%url%%">OverDrive Help</a>."
 od_none_found = "No titles found."
