fix overdrive help link

--- a/languages/en.ini
+++ b/languages/en.ini
@@ -970,7 +970,7 @@ od_is_on_hold = "You have this resource on hold."
 od_loans = "OverDrive Loans"
 od_mag_issue_ischeckedout = "checked out"
 od_magazine-overdrive = "Digital Magazine"
-od_mycontent_help = "For information about and help with downloading these titles, see <a href="%%url%%">OverDrive Help</a>."
+od_mycontent_help = 'For information about and help with downloading these titles, see <a href="%%url%%">OverDrive Help</a>.'
 od_none_found = "No titles found."
 od_people = "People"
 od_person = "Person"
