--- a/languages/el.ini
+++ b/languages/el.ini
@@ -22,7 +22,7 @@ Add a Note = "Προσθήκη σημείωσης"
 Add Tag = "Προσθήκη ετικέτας"
 Add Tags = "Προσθήκη ετικετών"
 Add to another list = "Προσθήκη σε άλλη λίστα"
-Add to Book Bag = "Προσθήκη στο καλάθι"
+Add to Book Bag = "Προσθήκη στον χαρτοφύλακα"
 Add to favorites = "Προσθήκη στα αγαπημένα"
 Add your comment = "Προσθήκη σχολίου"
 add_comment_fail_blank = "Το σχόλιο δεν μπορεί να είναι άδειο."
@@ -113,7 +113,7 @@ Awards = "Βραβεία"
 Back to Record = "Επιστροφή στην εγγραφή"
 Back to Search Results = "Επιστροφή στα αποτελέσματα αναζήτησης"
 Backtrace = "Διαγνωστική πληροφορία"
-Bag = "Καλάθι"
+Bag = "Χαρτοφύλακας"
 Balance = "Οφειλόμενα"
 Barcode = "Ραβδοκώδικας"
 Be the first to leave a comment = "καταχωρήστε σχόλιο πρώτοι"
@@ -123,15 +123,15 @@ Bibliography = "Βιβλιογραφία"
 blender_backend_error_message = "%%error%% -- %%label%%"
 Blu-ray Disc = "Δίσκος Blu-ray"
 Book = "Βιβλίο"
-Book Bag = "Καλάθι βιβλίων"
+Book Bag = "Χαρτοφύλακας"
 Book Chapter = "Κεφάλαιο βιβλίου"
 Book Cover = "Εξώφυλλο βιβλίου"
-bookbag_confirm_empty = "Σίγουρα θέλετε να αδειάσετε το καλάθι;"
-bookbag_delete = "Διαγραφή επιλεγμένων τεκμηρίων από το καλάθι"
+bookbag_confirm_empty = "Σίγουρα θέλετε να αδειάσετε τον χαρτοφύλακα;"
+bookbag_delete = "Διαγραφή επιλεγμένων τεκμηρίων από τον χαρτοφύλακα"
 bookbag_delete_selected = "Διαγραφή επιλεγμένων"
-bookbag_full = "Γεμάτο καλάθι"
-bookbag_full_msg = "Το καλάθι σας είναι γεμάτο"
-bookbag_is_empty = "Το καλάθι σας είναι άδειο"
+bookbag_full = "Γεμάτος χαρτοφύλακας"
+bookbag_full_msg = "Ο χαρτοφύλακάς σας είναι γεμάτος"
+bookbag_is_empty = "Ο χαρτοφύλακάς σας είναι άδειος"
 Bookmark = "Σελιδοδείκτης"
 bookplate_label = "%%title%% bookplate"
 Books = "Βιβλία"
@@ -391,7 +391,7 @@ email_sending = "Αποστολή μήνυματος..."
 email_subject = "Θέμα"
 email_success = "Το μήνυμα στάλθηκε"
 Empty = "Άδειο"
-Empty Book Bag = "Άδειασμα καλαθιού"
+Empty Book Bag = "Άδειασμα χαρτοφύλακα"
 empty_search_disallowed = "Δεν επιτρέπεται κενό ερώτημα με τον τρέχοντα στόχο αναζήτησης"
 Enable Auto Config = "Ενεργοποίηση αυτόματης παραμετροποίησης"
 End Page = "Τέλος σελίδας"
@@ -696,8 +696,8 @@ Item removed from favorites = "Το τεκμήριο αφαιρέθηκε από
 Item removed from list = "Το τεκμήριο αφαιρέθηκε από τη λίστα"
 Items = "Τεκμήρια"
 items = "τεκμήρια"
-items_added_to_bookbag = "%%count%% τεκμήρια προστέθηκαν στο καλάθι σας"
-items_already_in_bookbag = "%%count%% τεκμήρια ήδη περιέχονται στο καλάθι σας ή δεν είναι δυνατό να προστεθούν"
+items_added_to_bookbag = "%%count%% τεκμήρια προστέθηκαν στον χαρτοφύλακα"
+items_already_in_bookbag = "%%count%% τεκμήρια ήδη περιέχονται στον χαρτοφύλακά σας ή δεν είναι δυνατό να προστεθούν"
 Journal = "Επιστημονικό περιοδικό"
 Journal Articles = "Άρθρα περιοδικού"
 Journal Info = "Στοιχεία περιοδικού"
@@ -1124,7 +1124,7 @@ Related Items = "Σχετικά τεκμήρια"
 Related Subjects = "Σχετικά θέματα"
 Remove filter = "Αφαίρεση Φίλτρου"
 Remove Filters = "Κατάργηση φίλτρων"
-Remove from Book Bag = "Αφαίρεση από το καλάθι"
+Remove from Book Bag = "Αφαίρεση από τον χαρτοφύλακα"
 renew_all = "Ανανέωση όλων των τεκμηρίων"
 renew_determine_fail = "Δεν μπορεί να βεβαιωθεί η ανανέωση του τεκμηρίου. Απευθυνθείτε στην εξυπηρέτηση για βοήθεια."
 renew_empty_selection = "Δεν έχουν επιλεγεί τεκμήρια"
@@ -1207,7 +1207,7 @@ select_item_checked_out_renew = "Επιλογή τεκμηρίου για ανα
 select_item_hold_cancel = "Επιλογή τεκμηρίου για ακύρωση κρατήσεων ή ανακλήσεων"
 select_item_ill_request_cancel = "Επιλογή τεκμηρίου για ακύρωση αιτήματος διαδανεισμού"
 select_item_purge = "Επιλογή τεκμηρίου για διαγραφή"
-select_page_cart = "Επιλογή όλων των εγγραφών στο καλάθι"
+select_page_cart = "Επιλογή όλων των εγγραφών στον χαρτοφύλακα"
 select_pickup_location = "Επιλογή τοποθεσίας παραλαβής"
 select_request_group = "Επιλογή ομάδας αιτήματος"
 Selected = "Επιλέχθηκε"
@@ -1413,7 +1413,7 @@ Video = "Βίντεο"
 Video Clips = "Βιντεοκλιπ"
 Video Game = "Βιντεοπαιχνίδι"
 Videos = "Βίντεο"
-View Book Bag = "Προβολή καλαθιού"
+View Book Bag = "Προβολή χαρτοφύλακα"
 View Complete Issue = "Δείτε την πλήρη έκδοση"
 View Full Collection = "Εμφάνιση ολόκληρης της συλλογής"
 View Full Record = "Εμφάνιση ολόκληρης της εγγραφής"
@@ -1451,7 +1451,7 @@ You do not have any saved resources = "Δεν έχετε αποθηκεύσει 
 You do not have any storage retrieval requests placed = "Δεν έχετε υποβάλει κάποιο αίτημα ανάκτησης από αποθήκη"
 You must be logged in first = "Πρέπει πρώτα να συνδεθείτε"
 Your Account = "Ο λογαριασμός μου"
-Your book bag is empty = "Το καλάθι σας είναι άδειο"
+Your book bag is empty = "ΤΟ χαρτοφύλακάς σας είναι άδειος"
 Your Checked Out Items = "Τεκμήρια που έχω δανειστεί"
 Your Comment = "Το σχόλιό σας"
 Your Favorites = "Τα αγαπημένα μου"
