Change Greek translation for 'by'
Used to have this change in my local translation and seems to better fit the meaning of the translated strings

--- a/languages/el.ini
+++ b/languages/el.ini
@@ -165,21 +165,21 @@ bulk_print = "Εκτύπωση επιλεγμένων"
 bulk_save = "Αποθήκευση επιλεγμένων"
 bulk_save_error = "Ελλιπή στοιχεία. Η αποθήκευση των τεκμηρίων απέτυχε"
 bulk_save_success = "Η αποθήκευση των τεκμηρίων έγινε επιτυχώς"
-By = "Ανά"
-by = "ανά"
+By = "Από"
+by = "από"
 By Alphabetical = "αλφαβητικά"
-By Author = "ανά συγγραφέα"
-By Call Number = "ανά ταξινομικό αριθμό"
-By Course = "ανά μάθημα"
-By Department = "ανά τμήμα"
-By Era = "ανά Χρονική Περίοδο"
-By Genre = "ανά Κειμενικό Είδος"
-By Instructor = "ανά Διδάσκοντα"
-By Popularity = "ανά Δημοτικότητα"
-By Recent = "ανά Παλαιότητα"
-By Region = "ανά Θεματική Περιοχή"
-By Title = "ανά Τίτλο"
-By Topic = "ανά Θέμα"
+By Author = "με συγγραφέα"
+By Call Number = "με ταξινομικό αριθμό"
+By Course = "με μάθημα"
+By Department = "με τμήμα"
+By Era = "με Χρονική Περίοδο"
+By Genre = "με Κειμενικό Είδος"
+By Instructor = "με Διδάσκοντα"
+By Popularity = "με Δημοτικότητα"
+By Recent = "με Παλαιότητα"
+By Region = "με Θεματική Περιοχή"
+By Title = "με Τίτλο"
+By Topic = "με Θέμα"
 cached_record_warning = "Αυτή η εγγραφή δεν είναι διαθέσιμη στο ευρετήριο αναζήτησης. Εμφανίζεται η τελευταία αποθηκευμένη έκδοση."
 Call Number = "Ταξινομικός Αριθμός"
 callnumber_abbrev = "Ταξ/κός. Αρ."
@@ -1245,21 +1245,21 @@ Software = "Λογισμικό"
 Sorry, but the help you requested is unavailable in your language. = "Το θέμα της βοήθειας που ψάχνετε δεν είναι διαθέσιμο για τη γλώσσα σας."
 Sort = "Ταξινόμηση"
 sort_alphabetic = "Αλφαβητικά"
-sort_author = "Ανά συγγραφέα"
+sort_author = "Με συγγραφέα"
 sort_author_author = "Αλφαβητικά"
-sort_author_relevance = "Ανά δημοτικότητα"
-sort_callnumber = "Ανα Ταξινομικό Αριθμό"
+sort_author_relevance = "Με δημοτικότητα"
+sort_callnumber = "Με Ταξινομικό Αριθμό"
 sort_checkout_date_asc = "Ημ/νια δανεισμού (αύξουσα)"
 sort_checkout_date_desc = "Ημ/νια δανεισμού (φθίνουσα)"
 sort_count = "Αριθμός αποτελεσμάτων"
 sort_due_date_asc = "Ημ/νια επιστροφής (αύξουσα)"
 sort_due_date_desc = "Ημ/νια επιστροφής (φθίνουσα)"
-sort_relevance = "Ανά σχετικότητα"
+sort_relevance = "Με σχετικότητα"
 sort_return_date_asc = "Επιστράφηκε (αύξουσα)"
 sort_return_date_desc = "Επιστράφηκε (φθίνουσα)"
-sort_title = "Ανά Τίτλο"
-sort_year = "Ανά Ημερομηνία (φθιν.)"
-sort_year asc = "Ανά Ημερομηνία (αυξ.)"
+sort_title = "Με Τίτλο"
+sort_year = "Με Ημερομηνία (φθιν.)"
+sort_year asc = "Με Ημερομηνία (αυξ.)"
 Source = "Πηγή"
 Source Title = "Τίτλος πηγής"
 spell_expand_alt = "Επέκταση αναζήτησης"
