--- a/languages/el.ini
+++ b/languages/el.ini
@@ -1451,7 +1451,7 @@ You do not have any saved resources = "Δεν έχετε αποθηκεύσει 
 You do not have any storage retrieval requests placed = "Δεν έχετε υποβάλει κάποιο αίτημα ανάκτησης από αποθήκη"
 You must be logged in first = "Πρέπει πρώτα να συνδεθείτε"
 Your Account = "Ο λογαριασμός μου"
-Your book bag is empty = "ΤΟ χαρτοφύλακάς σας είναι άδειος"
+Your book bag is empty = "Ο χαρτοφύλακάς σας είναι άδειος"
 Your Checked Out Items = "Τεκμήρια που έχω δανειστεί"
 Your Comment = "Το σχόλιό σας"
 Your Favorites = "Τα αγαπημένα μου"
